--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -52,14 +52,16 @@
             <li class="sidebar-item">
                 <a id="nav-show4" class="sidebar-link" href="/material-order/show">
                     <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Поръчки на материали</span>
-
+                </a>
+            </li>
+            <li class="sidebar-item">
                 <a id="nav-show5" class="sidebar-link" href="/product/show">
                     <i class="align-middle" data-feather="credit-card"></i> <span class="align-middle">Продукти Лукерия</span>
                 </a>
             </li>
             <li class="sidebar-item">
                 <a id="nav-show6" class="sidebar-link" href="/user/show">
-                    <i class="align-middle" data-feather="credit-card"></i> <span class="align-middle">Потребители</span>
+                    <i class="align-middle" data-feather="user-plus"></i> <span class="align-middle">Потребители</span>
                 </a>
             </li>
         </ul>
