add fix for calculate Materials methods

--- a/src/main/resources/templates/MaterialOrder/show.html
+++ b/src/main/resources/templates/MaterialOrder/show.html
@@ -7,6 +7,17 @@
     <title> Поръчки на материали </title>
     <link href="/css/show.css" rel="stylesheet">
 </head>
+<style>
+        .availability-message {
+            background-color: #4CAF50; /* Зелен цвят на фона */
+            color: white; /* Бял цвят на текста */
+            padding: 10px; /* Подравняване на текста около съобщението */
+            position: fixed; /* Фиксирано позициониране */
+            top: 0; /* Отгоре на страницата */
+            left: 50%; /* Половината от ширината на страницата (центриране) */
+            transform: translateX(-50%); /* Центриране на хоризонталната ос */
+        }
+    </style>
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
@@ -18,18 +29,21 @@
             </a>
         </nav>
         <main class="content">
-                <div class="row">
-                    <div class="col-lg-9 mx-auto">
-                        <div class="card custom-card-width-lg">
-                            <div class="card-header">
-                                <h5 class="card-title mb-0">Всички поръчки на материали, които НЕ са доставени</h5>
-                            </div>
-                            <div class="text-center">
-                                <a href="/material-order/create" class="btn btn-primary">Поръчай материал</a>
-                            </div>
-                            <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table">
+            <div class="row">
+                <div class="col-lg-9 mx-auto">
+                    <div class="card custom-card-width-lg">
+                        <div class="card-header">
+                            <h5 class="card-title mb-0">Всички поръчки на материали, които НЕ са доставени</h5>
+                        </div>
+                        <div class="text-center">
+                            <a href="/material-order/create" class="btn btn-primary">Поръчай материал</a>
+                        </div>
+                        <div class="availability-message">
+                            <p> Всичко е налично !</p>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table">
                                     <thead>
                                     <tr>
                                         <th>Поръчка</th>
@@ -39,7 +53,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr th:each="order : ${orders}"  th:unless="${order.arrivalDate}">
+                                    <tr th:each="order : ${orders}" th:unless="${order.arrivalDate}">
                                         <td th:text="${order.id}"></td>
                                         <td th:text="${order.materialId}"></td>
                                         <td th:if="${order.materialType == 'CARTON'}">Кашон</td>
@@ -63,12 +77,12 @@
                             </div>
                         </div>
                         <br><br>
-                            <div class="card-header">
-                                <h5 class="card-title mb-0">Всички поръчки на материали, които СА са доставени</h5>
-                            </div>
-                            <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table">
+                        <div class="card-header">
+                            <h5 class="card-title mb-0">Всички поръчки на материали, които СА са доставени</h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table">
                                     <thead>
                                     <tr>
                                         <th>Поръчка</th>
@@ -81,7 +95,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr th:each="order : ${orders}"  th:if="${order.arrivalDate}">
+                                    <tr th:each="order : ${orders}" th:if="${order.arrivalDate}">
                                         <td th:text="${order.id}"></td>
                                         <td th:text="${order.materialId}"></td>
                                         <td th:if="${order.materialType == 'CARTON'}">Кутия</td>
@@ -109,10 +123,9 @@
                         </div>
                     </div>
                 </div>
-                    </div>
-                </div>
-        </main>
-    </div>
+            </div>
+    </main>
+</div>
 </div>
 <script src="/js/app.js"></script>
 </body>
