--- a/src/main/resources/templates/Client/show.html
+++ b/src/main/resources/templates/Client/show.html
@@ -30,6 +30,14 @@
                 <a href="/client/create" class="btn btn-primary">Добави Клиент</a>
               </div>
               <div class="card-body">
+                <div class="row mb-3">
+                  <div class="col">
+                    <input type="text" id="searchInput1" class="form-control" placeholder="Търсене по номер ID...">
+                  </div>
+                  <div class="col">
+                    <input type="text" id="searchInput" class="form-control" placeholder="Търсене по име на фирма...">
+                  </div>
+                </div>
                 <div class="table-responsive">
                   <table class="table">
                   <thead>
