--- a/src/main/resources/templates/MaterialOrder/edit.html
+++ b/src/main/resources/templates/MaterialOrder/edit.html
@@ -52,7 +52,7 @@
                             <div class="form-group">
                                 <label for="materialId">Номер на поръчан материал:</label>
                                 <input type="text" id="materialId1" name="materialId"
-                                       th:field="${order.materialId}" disabled/>
+                                       th:field="${order.materialId}"/>
                                 <input type="hidden"  name="materialId"
                                        th:field="${order.materialId}" />
                             </div>
