--- a/src/main/resources/templates/Package/show.html
+++ b/src/main/resources/templates/Package/show.html
@@ -44,6 +44,14 @@
                                 <a href="/package/create" class="btn btn-primary">Добави Кутия</a>
                             </div>
                             <div class="card-body">
+                                <div class="row mb-3">
+                                    <div class="col">
+                                        <input type="text" id="searchInput1" class="form-control" placeholder="Търсене по номер ID...">
+                                    </div>
+                                    <div class="col">
+                                        <input type="text" id="searchInput" class="form-control" placeholder="Търсене по име...">
+                                    </div>
+                                </div>
                                 <div class="table-responsive">
                                     <table class="table">
                                     <thead>
@@ -97,5 +105,3 @@
 </body>
 
 </html>
-<script>
-</script>
