--- a/src/main/resources/templates/Plate/show.html
+++ b/src/main/resources/templates/Plate/show.html
@@ -30,6 +30,14 @@
                                 <a href="/plate/create" class="btn btn-primary">Добави Тарелка</a>
                             </div>
                             <div class="card-body">
+                                <div class="row mb-3">
+                                    <div class="col">
+                                        <input type="text" id="searchInput1" class="form-control" placeholder="Търсене по номер ID...">
+                                    </div>
+                                    <div class="col">
+                                        <input type="text" id="searchInput" class="form-control" placeholder="Търсене по име...">
+                                    </div>
+                                </div>
                                 <div class="table-responsive">
                                     <table class="table">
                                     <thead>
