--- a/src/main/resources/templates/OrderProduct/show.html
+++ b/src/main/resources/templates/OrderProduct/show.html
@@ -68,6 +68,11 @@
                         <button type="submit" class="btn btn-warning">Провери налични Материали</button>
                       </form>
                     </td>
+                    <td>
+                      <form th:action="@{'/invoice/show/' + ${order.id}}" method="get">
+                        <button type="submit" class="btn btn-primary"> Фактуриране на тази поръчка </button>
+                      </form>
+                    </td>
                   </tr>
                   </tbody>
                 </table>
