--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -64,6 +64,11 @@
                     <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Поръчки на материали</span>
                 </a>
             </li>
+            <li class="sidebar-item">
+                <a id="nav-show7" class="sidebar-link" href="/invoice/certificate/show">
+                    <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Сертификати</span>
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
