--- a/src/main/resources/templates/Certificate/Certificate.html
+++ b/src/main/resources/templates/Certificate/Certificate.html
@@ -22,9 +22,9 @@
         <main class="content">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <button onclick="printPage()">
-                    <i class="fas fa-print"></i>
-                </button>
+                    <button onclick="generatePDF()">
+                        Свали PDF
+                    </button>
                     <div class="card custom-card-width-lg">
                         <center>
                         <img class="card-img-top" src="/img/photos/logos.png" alt="Logo" style="width: 800px; height: 280px; float: left;">
@@ -73,9 +73,21 @@
     </div>
 </div>
 <script src="/js/app.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
 <script>
-    function printPage() {
-        window.print();
+    function generatePDF() {
+        const element = document.querySelector('.custom-card-width-lg'); // Select the element to convert to PDF
+        const opt = {
+            margin: 10,
+            filename: 'certificate.pdf', // Set the PDF file name
+            image: { type: 'jpeg', quality: 0.98 }, // Image settings
+            html2canvas: { scale: 2 }, // Higher scale for better resolution
+            jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' } // PDF settings
+        };
+
+        // Use html2pdf to generate the PDF
+        html2pdf().from(element).set(opt).save();
     }
 </script>
 </body>
