add confirmation.html - generate pdf add confirmation/show.html

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -69,6 +69,11 @@
                     <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Сертификати</span>
                 </a>
             </li>
+            <li class="sidebar-item">
+                <a id="nav-show8" class="sidebar-link" href="/invoice/confirmation/show">
+                    <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Confirmations</span>
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
