--- a/src/main/resources/templates/Confirmation/show.html
+++ b/src/main/resources/templates/Confirmation/show.html
@@ -4,7 +4,7 @@
     <!--    LINKS  -->
     <th:block th:include="~{fragments/links}"></th:block>
 
-    <title> Сертификати </title>
+    <title> Confirmations </title>
     <link href="/css/show.css" rel="stylesheet">
 </head>
 <body>
