--- a/src/main/resources/templates/Certificate/Certificate.html
+++ b/src/main/resources/templates/Certificate/Certificate.html
@@ -22,9 +22,14 @@
         <main class="content">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <button onclick="generatePDF()">
+                    <button type="button" class="btn btn-outline-primary" onclick="generatePDF()">
                         Свали PDF
                     </button>
+                    <button type="button" class="btn btn-outline-info" onclick="translateToEnglish()">
+                        Преведи документа на английски език
+                    </button>
+                    <div id="google-translate"></div>
+
                     <div class="card custom-card-width-lg">
                         <center>
                         <img class="card-img-top" src="/img/photos/logos.png" alt="Logo" style="width: 800px; height: 280px; float: left;">
@@ -74,6 +79,7 @@
 </div>
 <script src="/js/app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <script>
     function generatePDF() {
@@ -90,5 +96,15 @@
         html2pdf().from(element).set(opt).save();
     }
 </script>
+<script>
+    function translateToEnglish() {
+        new google.translate.TranslateElement({
+            pageLanguage: 'bg', // Set the source language (Bulgarian)
+            includedLanguages: 'en', // Set the target language (English)
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+        }, 'google-translate');
+    }
+</script>
+
 </body>
 </html>
