add translate to english option to the certificate - change design

--- a/src/main/resources/templates/Certificate/Certificate.html
+++ b/src/main/resources/templates/Certificate/Certificate.html
@@ -99,9 +99,9 @@
 <script>
     function translateToEnglish() {
         new google.translate.TranslateElement({
-            pageLanguage: 'bg', // Set the source language (Bulgarian)
-            includedLanguages: 'en', // Set the target language (English)
-            layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            pageLanguage: 'bg',
+            includedLanguages: 'en',
+            layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
         }, 'google-translate');
     }
 </script>
