--- a/src/main/resources/templates/Query/show.html
+++ b/src/main/resources/templates/Query/show.html
@@ -4,14 +4,13 @@
     <!--    LINKS  -->
     <th:block th:include="~{fragments/links}"></th:block>
 
-    <title> Продукти по номер на Поръчка </title>
+    <title> Фактура </title>
     <link href="/css/show.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
     <th:block th:include="~{fragments/header}"></th:block>
-
 
     <div class="main">
         <nav class="navbar navbar-expand navbar-light navbar-bg">
@@ -24,11 +23,40 @@
                 <div class="col-lg-8 mx-auto">
                     <div class="card custom-card-width-lg">
                         <div class="card-header">
-                            <h5 class="card-title mb-0">Продукти по номер на Поръчка</h5>
-                            <div class="text-center">
-                                <a th:if="${orderProductDTOS != null and orderProductDTOS.size() > 0}"
-                                   th:href="@{/orderProduct/orderDetails/{orderId}(orderId=${orderProductDTOS[0].orderId})}" class="btn btn-primary">Order
-                                    Details</a>
+                            <div class="container">
+                                <div class="text-container">
+                                    <strong class="underlined" th:text="ПОЛУЧАТЕЛ"></strong>
+                                    <h5><strong
+                                            th:text="'Име : ' + ${clientDTOS[orderDTO.clientId - 1].businessName}"></strong>
+                                    </h5>
+                                    <h5><strong
+                                            th:text="'Ид. номер: ' + ${clientDTOS[orderDTO.clientId - 1].idNumEIK}"></strong>
+                                    </h5>
+                                    <h5><strong th:if="${clientDTOS[orderDTO.clientId - 1].hasIdNumDDS}">
+                                        <span th:text="'Ид. номер по ДДС: BG' + ${clientDTOS[orderDTO.clientId - 1].idNumEIK}"></span>
+                                    </strong></h5>
+                                    <h5><strong
+                                            th:text="'Адрес: ' + ${clientDTOS[orderDTO.clientId - 1].address}"></strong>
+                                    </h5>
+                                    <h5><strong th:text="'МОЛ: ' + ${clientDTOS[orderDTO.clientId - 1].mol}"></strong>
+                                    </h5>
+                                </div>
+
+                                <div class="text-container right">
+                                    <strong class="underlined" th:text="ДОСТАВЧИК"></strong>
+                                    <h5><strong th:text="'Име : ' + 'Лукерия ООД'"></strong></h5>
+                                    <h5><strong th:text="'Ид. номер: ' + '200418603'"></strong></h5>
+                                    <h5><strong>
+                                        <span th:text="'Ид. номер по ДДС: BG' + '200418603'"></span>
+                                    </strong></h5>
+                                    <h5><strong th:text="'Адрес: ' + 'Промишлена Зона обл.Търговище 7700'"></strong>
+                                    </h5>
+                                    <h5><strong th:text="'МОЛ: ' +'Кадрия Фейзи Йълдъз'"></strong>
+                                    </h5>
+                                </div>
+                            </div>
+                            <div class="centered">
+                                <h2 th:text="'Фактура: ' + (${lastInvoiceNumber + 1})+' / '+ ${#dates.format(#dates.createNow(), 'dd.MM.yyyy')}"></h2>
                             </div>
                         </div>
                         <div class="card-body">
@@ -39,26 +67,51 @@
                                     <thead>
                                     <tr>
                                         <th>ID</th>
-                                        <th>Брой Поръчани</th>
-                                        <th>Продукт ID</th>
-                                        <th>
-                                            <strong th:text="'Клиент : ' + ${clientDTOS[orderDTO.clientId - 1].businessName}"></strong>
-                                        </th>
+                                        <th>Наименувание</th>
+                                        <th>Количество</th>
+                                        <th>ЕД.Цена без ДДС</th>
+                                        <th>ДДС %</th>
+                                        <th>Стойност без ДДС</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     <tr th:each="orderProductDTO : ${orderProductDTOS}">
                                         <td th:text="${orderProductDTO.id}"></td>
-                                        <td th:text="${orderProductDTO.number}"></td>
                                         <td>
                                             <span th:each="packageDTO : ${packageDTOS}"
                                                   th:if="${packageDTO.id == orderProductDTO.packageId}"
                                                   th:text="${packageDTO.name}"></span>
                                         </td>
+                                        <td>
+                                            <input class="quantity-input" type="number" th:value="${orderProductDTO.number}" min="1">
+                                            <span> БР</span>
+                                        </td>
+
+                                        <td>
+                                            <input type="number" step="0.01" class="price-input"
+                                                   data-value="${productDTOS[__${orderProductDTO.packageId - 1}__].price}"
+                                                   th:value="${productDTOS[__${orderProductDTO.packageId - 1}__].price}"
+                                                   placeholder="${productDTOS[__${orderProductDTO.packageId - 1}__].price}"
+                                                   size="5">
+                                        </td>
+                                        <td th:text="20"></td>
+
+                                        <td><span th:each="productDTO : ${productDTOS}"
+                                                  th:if="${productDTO.id == orderProductDTO.packageId}"
+                                                  th:text="${productDTO.price}*${orderProductDTO.number}"></span></td>
                                     </tr>
-                                    <td>В тази таблица имаме Клиент "clientDTOS[orderDTO.clientId - 1]" също имаме ЛИСТ от всички поръчани продукти за тази поръчка "orderProductDTOS" също и Ордер ИД "orderDTO.id" </td>
                                     </tbody>
                                 </table>
+                                <div class="text-center">
+                                    <a th:if="${orderProductDTOS != null and orderProductDTOS.size() > 0}"
+                                       th:href="@{/}"
+                                       class="btn btn-danger">Фактурирай</a>
+                                </div>
+                                <div class="text-center">
+                                    <a th:if="${orderProductDTOS != null and orderProductDTOS.size() > 0}"
+                                       th:href="@{/orderProduct/orderDetails/{orderId}(orderId=${orderProductDTOS[0].orderId})}"
+                                       class="btn btn-primary">Order Details</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -67,6 +120,6 @@
         </main>
     </div>
 </div>
-<script src="/js/app.js"></script>
 </body>
+<script src="/js/invoice.js"></script>
 </html>
